# Resoluto

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: expr.rs  lib.rs  obfuscate.rs  polynomial.rs
web/: Cargo.toml  Trunk.toml  index.html  styles.css
web/src/: main.rs
