[package]
name = "resoluto_web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
resoluto_core = { path = "../core" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
getrandom.workspace = true
[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
    "HtmlSelectElement",
    "Event",
    "EventTarget",
    "Window",
    "Document",
    "Element",
    "Node",
    "HtmlElement",
]
